[*] fix bug with setting 0 when no data available

--- a/chrome/_locales/en/messages.json
+++ b/chrome/_locales/en/messages.json
@@ -19,5 +19,11 @@
     },
     "options_api_get": {
         "message": "Get your API key here"
+    },
+    "like": {
+        "message": "LIKE"
+    },
+    "dislike": {
+        "message": "DISLIKE"
     }
 }
